fixedcentering for jobs-top-desc on mobile display

--- a/wentors_site/static/css/style.css
+++ b/wentors_site/static/css/style.css
@@ -5,11 +5,20 @@
 #deecc7
 --------------------------------------------------------------*/
 /* Jobs page #FAF9F6*/
+@media (max-width: 400px) {
+
+    .justify-content-center .jobs-top-desc{
+      padding-left: 2px !important;
+      padding-right: 2px !important;
+    }
+
+  }
+  
 
 .justify-content-center .jobs-top-desc{
   padding-left: 1px !important;
   padding-right: 1px !important;
-
+  text-align: center;
 }
 
 .jobs-card{
